add strong note about changes to src/Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,10 @@
 
+########
+########    WARNING: DO NOT CHANGE THIS FILE WITHOUT RUNNING dist.sh SUCCESSFULLY
+########    BEFORE PUSHING YOUR CHANGES!
+########
+
+
 AM_CPPFLAGS = -include ../config.h
 AM_CXXFLAGS = $(CORE_CFLAGS) $(XSM_CFLAGS) $(IMAGE_CFLAGS) $(AUDIO_CFLAGS) $(GNOME1_CFLAGS) $(GNOME2_CFLAGS) $(GIO_CFLAGS) -DEXEEXT=$(EXEEXT)
 
