--- a/src/config.cmake.h.in
+++ b/src/config.cmake.h.in
@@ -15,10 +15,10 @@
 #define HOSTCPU "@CMAKE_HOST_SYSTEM_PROCESSOR@"
 #define HOSTOS "@CMAKE_HOST_SYSTEM_NAME@"
 
-// autoconf declares them but I couldn't find any good reason to use them. Wiping out...
-#define SELECT_TYPE_ARG1
-#define SELECT_TYPE_ARG234
-#define SELECT_TYPE_ARG5
+// just hardcoding the POSIX-2001 version
+#define SELECT_TYPE_ARG1 int
+#define SELECT_TYPE_ARG234 (fd_set *)
+#define SELECT_TYPE_ARG5 (struct timeval *)
 
 #define SIZEOF_CHAR @SIZEOF_CHAR@
 #define SIZEOF_INT @SIZEOF_INT@
@@ -97,6 +97,7 @@
 
 #cmakedefine CONFIG_XPM 1
 #cmakedefine CONFIG_IMLIB  1
+#cmakedefine CONFIG_LIBPNG  1
 #cmakedefine CONFIG_GDK_PIXBUF_XLIB 1
 #cmakedefine CONFIG_I18N 1
 #cmakedefine ENABLE_NLS 1
