--- a/lib/winoptions.in
+++ b/lib/winoptions.in
@@ -12,6 +12,10 @@ emacs.Emacs.icon: emacs
 AWTapp.icon: java
 # workaround for XV window repositioning problems
 xv.nonICCCMconfigureRequest: 1
+
+# make Evince resizable
+evince.dBorder: 1
+
 xeyes.ignoreWinList: 0
 xeyes.ignoreTaskBar: 1
 xeyes.allWorkspaces: 1
