Cmake support JPEG for XPM and fix FRIBIDI.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,7 +64,8 @@ endif()
 
 
 option(CONFIG_LIBPNG "(Experimental) PNGLIB image loader" on)
-option(CONFIG_GDK_PIXBUF_XLIB "LIBGDKPIXBUF based image loader" off)
+option(CONFIG_LIBJPEG "JPEGLIB image loader" on)
+option(CONFIG_GDK_PIXBUF_XLIB "GDK-PIXBUF based image loader" off)
 option(CONFIG_XPM "(Optional) XPM image loader" on)
 option(CONFIG_I18N "Define to enable internationalization" on)
 option(CONFIG_RENDER "Define to enable XRENDER extension" on)
@@ -81,12 +82,18 @@ ELSE()
     MESSAGE(STATUS "Configured custom unicode set: ${CONFIG_UNICODE_SET}.")
 ENDIF()
 
-if(CONFIG_GDK_PIXBUF_XLIB AND NOT CONFIG_LIBPNG AND NOT CONFIG_XPM)
+if(CONFIG_GDK_PIXBUF_XLIB AND NOT CONFIG_XPM)
     #ok
-elseif(NOT CONFIG_XPM AND NOT CONFIG_LIBPNG AND NOT CONFIG_GDK_PIXBUF_XLIB)
+    set(CONFIG_LIBPNG off)
+    set(CONFIG_LIBJPEG off)
+elseif(CONFIG_XPM AND NOT CONFIG_GDK_PIXBUF_XLIB)
     #ok
-elseif(CONFIG_XPM AND CONFIG_LIBPNG AND NOT CONFIG_GDK_PIXBUF_XLIB)
-    #ok
+    if (NOT CONFIG_LIBPNG)
+        message(WARNING "LIBPNG is recommended for PNG image support")
+    endif()
+    if (NOT CONFIG_LIBJPEG)
+        message(WARNING "LIBJPEG is advisable for backgrounds in icewmbg")
+    endif()
 else()
     MESSAGE(FATAL_ERROR "Possible combination of image loaders are:
     -DCONFIG_XPM=on -DCONFIG_LIBPNG=on -DCONFIG_GDK_PIXBUF_XLIB=off
@@ -334,10 +341,10 @@ if(XINERAMA)
     endif()
 endif()
 
-option(CONFIG_FRIBIDI on)
+option(CONFIG_FRIBIDI "Define to enable FRIBIDI support" on)
 if(CONFIG_FRIBIDI)
     pkg_check_modules(fribidi fribidi)
-    if(not fribidi_FOUND)
+    if(NOT fribidi_FOUND)
         message(WARNING "FRIBIDI is not supported")
         set(CONFIG_FRIBIDI off)
     endif()
@@ -426,7 +433,7 @@ SET(ICEWM_SRCS ${ICE_COMMON_SRCS} ${ITK_SRCS}
 ADD_EXECUTABLE(icewm${EXEEXT} ${ICEWM_SRCS})
 set(icewm_pc_flags "${fontconfig_CFLAGS} ${x11_CFLAGS} ${xext_CFLAGS} ${libpng_CFLAGS} ${libxpm_CFLAGS} ${pixbuf_CFLAGS} ${xft_CFLAGS} ${xrandr_CFLAGS} ${xrender_CFLAGS} ${xinerama_CFLAGS} ${fribidi_CFLAGS}")
 SET_TARGET_PROPERTIES(icewm${EXEEXT} PROPERTIES COMPILE_FLAGS "${CXXFLAGS_COMMON} ${icewm_pc_flags}")
-list(APPEND icewm_libs ${sm_LIBS} ${nls_LIBS} ${fontconfig_LDFLAGS} ${xext_LDFLAGS} ${x11_LDFLAGS} ${xft_LDFLAGS} ${xrandr_LDFLAGS} ${xinerama_LDFLAGS} ${fribidi_LDFLAGS} ${EXTRA_LIBS})
+list(APPEND icewm_libs ${sm_LIBS} ${nls_LIBS} ${fontconfig_LDFLAGS} ${fribidi_LDFLAGS} ${xext_LDFLAGS} ${x11_LDFLAGS} ${xft_LDFLAGS} ${xrandr_LDFLAGS} ${xinerama_LDFLAGS} ${EXTRA_LIBS})
 TARGET_LINK_LIBRARIES(icewm${EXEEXT} ${icewm_libs} ${icewm_img_libs})
 
 ADD_EXECUTABLE(genpref${EXEEXT} genpref.cc misc.cc)
