[cmake] Made manpages cleaning/dependencies/installation right

--- a/man/CMakeLists.txt
+++ b/man/CMakeLists.txt
@@ -1,5 +1,3 @@
-ADD_CUSTOM_TARGET(man ALL)
-
 #
 # The destination directory for manpages.
 #
@@ -8,12 +6,10 @@ if(NOT MANDIR)
 endif()
 
 macro(Pod2Man name sectionId sectionName)
-        #set(manName "${name}.${sectionId}")
-        #set(podName "${name}")
         string(REGEX REPLACE "\\.man$" ".pod" podName "${name}")
         string(REGEX REPLACE "\\.man$" ".${sectionId}" manName "${name}")
         ADD_CUSTOM_COMMAND(
-                TARGET man
+                OUTPUT ${manName}
                 DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${podName}
                 COMMAND pod2man ARGS --center="${sectionName}"
                 --errors="none"
@@ -23,10 +19,10 @@ macro(Pod2Man name sectionId sectionName)
                 --fixedbolditalic="CX"
                 --nourls
                 --release="${PACKAGE} ${VERSION}" --section="${sectionId}"
-                ${CMAKE_CURRENT_SOURCE_DIR}/${podName} ${CMAKE_CURRENT_BINARY_DIR}/${manName}
-                OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/${manName})
-        ADD_CUSTOM_COMMAND(TARGET man DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${manName})
+                ${CMAKE_CURRENT_SOURCE_DIR}/${podName} ${manName}
+                )
         INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${manName} DESTINATION "${MANDIR}/man${sectionId}")
+        list(APPEND MAN_RESULTS ${manName})
 endmacro()
 
 set(icewm_man1_files
@@ -68,30 +64,4 @@ foreach(x ${icewm_man5_files})
         Pod2Man(${x} 5 "Standards, Environments and Macros")
 endforeach()
 
-##foreach(src ${SRCS})
-##        string(REGEX REPLACE "\\.pod$" ".1" htm "${adoc}")
-##        set(txt "${CMAKE_SOURCE_DIR}/doc/${adoc}")
-##        set(out "${CMAKE_BINARY_DIR}/${htm}")
-##        ADD_CUSTOM_COMMAND(OUTPUT "${out}"
-##            COMMAND "${ASCIIDOC}" "${ASCIIDOC_BACKEND}" -o "${out}" "${txt}"
-##            DEPENDS "${txt}"
-##            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-##            )
-##        list(APPEND HTML_OUTPUT_FILES "${out}")
-##    endforeach()
-##    ADD_CUSTOM_TARGET(build_html_docs ALL DEPENDS ${HTML_OUTPUT_FILES})
-##
-##ADD_CUSTOM_COMMAND(
-##  TARGET man
-##  SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/myprog.pod
-##  COMMAND pod2man ARGS -s 1 -c "myprog manual" ${CMAKE_CURRENT_SOURCE_DIR}/myprog.pod ${CMAKE_CURRENT_BINARY_DIR}/myprog.1
-##  OUTPUTS ${CMAKE_CURRENT_BINARY_DIR}/myprog.1
-##)
-##
-##ADD_CUSTOM_COMMAND(
-##  TARGET man
-##  SOURCE man
-##  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/myprog.1
-##)
-##
-##INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/myprog.1 DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
+ADD_CUSTOM_TARGET(manpages ALL DEPENDS ${MAN_RESULTS})
