Avoid redrawing applets if possible for issue #258. Add "includeprog" control for menu files for issue #264. Give applets a menu to control them interactively. Fix a memory leak for button submenus.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -431,7 +431,7 @@ SET(ICEWM_SRCS ${ICE_COMMON_SRCS} ${ITK_SRCS}
     wmwinmenu.cc wmdialog.cc wmabout.cc wmswitch.cc wmstatus.cc
     wmoption.cc wmcontainer.cc wmclient.cc wmmgr.cc
     wmapp.cc wmframe.cc wmminiicon.cc wmtitle.cc wpixres.cc
-    movesize.cc themes.cc decorate.cc browse.cc wmprog.cc atasks.cc
+    movesize.cc themes.cc decorate.cc browse.cc wmmenu.cc wmprog.cc atasks.cc
     aworkspaces.cc amailbox.cc aclock.cc acpustatus.cc apppstatus.cc
     aaddressbar.cc objbar.cc aapm.cc atray.cc ysmapp.cc yxtray.cc yurl.cc
     globit.cc amemstatus.cc)
