Move common applet features to class IApplet. Reduce redraw of applets a bit further for issue #258. Get list if network devices using if_nameindex. A few more monitor menu entries.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -434,7 +434,7 @@ SET(ICEWM_SRCS ${ICE_COMMON_SRCS} ${ITK_SRCS}
     movesize.cc themes.cc decorate.cc browse.cc wmmenu.cc wmprog.cc atasks.cc
     aworkspaces.cc amailbox.cc aclock.cc acpustatus.cc apppstatus.cc
     aaddressbar.cc objbar.cc aapm.cc atray.cc ysmapp.cc yxtray.cc yurl.cc
-    globit.cc amemstatus.cc)
+    globit.cc amemstatus.cc applet.cc)
 
 
 ADD_EXECUTABLE(icewm${EXEEXT} ${ICEWM_SRCS})
