--- a/configure.ac
+++ b/configure.ac
@@ -130,7 +130,7 @@ if test x$cross_compling != xyes ; then :; AC_FUNC_MALLOC fi
 if test x$cross_compling != xyes ; then :; AC_FUNC_REALLOC fi
 AC_CHECK_FUNCS([abort backtrace_symbols_fd basename dup2])
 AC_CHECK_FUNCS([gethostbyname gethostname gettimeofday])
-AC_CHECK_FUNCS([if_nametoindex if_indextoname])
+AC_CHECK_FUNCS([if_nametoindex if_indextoname if_nameindex])
 AC_CHECK_FUNCS([mblen memchr memmove memset mkdir nl_langinfo])
 AC_CHECK_FUNCS([select setlocale socket])
 AC_CHECK_FUNCS([strcasecmp strchr strcspn strdup strerror strncasecmp])
