--- a/lib/menu.in
+++ b/lib/menu.in
@@ -5,11 +5,11 @@
 # (re)install icewm.
 #
 prog xterm xterm xterm
-prog rxvt xterm rxvt -bg black -cr green -fg white -C -fn 9x15 -sl 500
-prog fte fte fte
+prog urxvt xterm urxvt -bg black -cr green -fg white -C -fn 9x15 -sl 500
+prog gedit fte gedit
 prog NEdit nedit nedit
-prog Mozilla mozilla mozilla
-prog XChat xchat xchat
+prog Firefox mozilla firefox
+prog Hexchat xchat hexchat
 prog Gimp gimp gimp
 separator
 menuprog "Desktop Apps" folder icewm-menu-fdo
