--- a/lib/menu.in
+++ b/lib/menu.in
@@ -5,7 +5,7 @@
 # (re)install icewm.
 #
 prog xterm xterm xterm
-prog urxvt xterm urxvt -bg black -cr green -fg white -C -fn 9x15 -sl 500
+prog urxvt xterm urxvt -bg black -cr green -fg white -C -sl 500
 prog gedit fte gedit
 prog NEdit nedit nedit
 prog Firefox mozilla firefox
